# field-compounding-validation

./: .gitignore  CLOUD_AGENT_LAUNCH.md  MODULE12_AGENT_PLAN.md  README.md  pyproject.toml
.cursor/: environment.json
.github/workflows/: ci.yml
configs/: compound_field_experiment.yaml  module_03.yaml  module_04.yaml  module_05.yaml  module_06.yaml  module_07.yaml  module_08.yaml  module_09.yaml  module_10.yaml  module_11.yaml  module_12.yaml  module_13.yaml  module_14.yaml
notebooks/: colab_run.ipynb
observatory/: manifest_v2.json  manifest_v2.schema.json  module11_coupling.json
observatory/traces/: roomba_synthetic.jsonl  urc_neurosymbolic_stub.jsonl  (+5 more)
paper/: jmlr2e.sty  paper12_field_compounding.tex  references.bib
scripts/: colab_cli.sh  colab_remote_run.py  fill_paper_values.py  generate_observatory_manifest.py  launch_cloud_agents.py  merge_agents.sh  run_all_and_validate.sh  run_benchmark.py  run_compound_field_experiment.py  validate_results.py
tests/: conftest.py  test_adapters_a.py  test_adapters_b.py  test_coupling_transfer.py  test_dgp_causal.py  test_dgp_equivariant.py  test_dgp_fleet_safety.py  test_dgp_neurosymbolic.py  test_dgp_scene_graph.py  test_dgp_scene_repr.py  test_dgp_sim_to_field.py  test_dgp_uncertainty.py  test_dgp_visual_ssl.py  test_dgp_visuomotor.py  test_dgp_world_model.py  test_evaluation_core.py  test_ingest_roomba.py  test_ingest_urc.py  test_mitigation.py  test_package_imports.py  test_paper_scaffold.py  test_pipeline_integration.py  test_replay.py  test_theory_partial_obs.py  test_utils.py  test_violation_estimator.py
(+62 files in other folders)
